fixes #246 by adding text to the left of the button
fixes #246 by adding text to the button

fixes #253 by adding the hungarian sip to the dropdown

progress on #250 (GUI part)

sip names are created using sip naming strategies that are specific to each SIP type; sip naming parameters are saved to the config file and loaded as default values in the create SIP form

fixes #246 according to suggestions

serial number is now correctly saved&loaded from config; fixed toggle buttons design

adds minimal panel that allows setting METS Header options. set up transition between the first and second panels

create a METS Header form from configuration options

focus next textfield when removing a field; focus new field when added; use correct styling for groups with only one field

improved design, completed i18n, moved CSS classnames to constants, made it possible to use a combo box to limit the values that can be chosen for an altrecordid value

saves and loads METS Header state (state is associated with a specific SIP type)

fixed english i18n for the hungarian sip; added hungarian translations for the hungarian sip

--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -257,3 +257,72 @@ Main.helpPage = Segítség
 SchemaPane.tooManySelected.header=Túl sok elem van kijelölve
 SchemaPane.tooManySelected.content=Több kiadás nem elérhető
 SchemaPane.tooManySelected.title=Túl sok elem van kijelölve
+
+
+i18n.metsheader.HUNGARIAN.recordStatus.label = Státusz
+i18n.metsheader.HUNGARIAN.recordStatus.description = Az elektronikus átvételi csomag státusza. Lehetséges értékei:\\n„Új csomag”, amelynek reprezentációja „NEW”;\\n„Helyettesítő csomag”, amelynek reprezentációja „REPLACEMENT”;\\n„Teszt csomag”, amelynek reprezentációja „TEST”.
+
+i18n.metsheader.HUNGARIAN.deliveryType.label = Átadás típusa
+i18n.metsheader.HUNGARIAN.deliveryType.description = Az elektronikus átvételi csomag átadási típusa:\\n„tanúsított iratkezelési szoftver”, amelynek reprezentációja „TANÚSÍTOTT IKTATÁS”;\\n„iktatási iratnyilvántartás”, amelynek reprezentációja „STRUKTURÁLT IKTATÁS”;\\n„nem iktatási típusú iratnyilvántartás, iratszintű metaadatokkal”, amelynek reprezentációja „STRUKTURÁLT IRATNYILVÁNTARTÁS”;\\n„nem iratszintű metaadatok”, amelynek reprezentációja „STRUKTURÁLATLAN”.
+
+i18n.metsheader.HUNGARIAN.deliverySpecification.label = Átvétel típusát leíró dokumentum
+i18n.metsheader.HUNGARIAN.deliverySpecification.description = Az elektronikus átvételi csomag átvételi típusát részletesen meghatározó dokumentum címe és elérhetősége.
+
+i18n.metsheader.HUNGARIAN.submissionAgreement.label = Levéltári átadás-átvételi megállapodás
+i18n.metsheader.HUNGARIAN.submissionAgreement.description = Az iratátadó és a levéltár között létrejött levéltári átadás-átvételi megállapodás iktatószáma és dátuma. A két adatot pontosvesszővel kell elválasztani. A levéltár saját anyagáról készített digitális másolat esetén ügyiratszám.
+
+i18n.metsheader.HUNGARIAN.previousSubmissionAgreement.label = Korábbi levéltári átadás-átvételi megállapodás
+i18n.metsheader.HUNGARIAN.previousSubmissionAgreement.description = Az elektronikus átvételi csomag tartalmára vonatkozó korábbi levéltári átadás-átvételi megállapodás iktatószáma és dátuma, amely pl. két levéltár közötti átadás esetén nyújt információt az iratképzőtől való átvétel körülményeire vonatkozóan.
+
+i18n.metsheader.HUNGARIAN.dataSubmissionSession.label = Beküldés
+i18n.metsheader.HUNGARIAN.dataSubmissionSession.description = A megállapodás alapján az átvétel több szakaszra tagolva is megvalósítható. A metaadat tartalmazza a beküldési szakasz megnevezését, azonosítóját.
+
+i18n.metsheader.HUNGARIAN.packageNumber.label = Beküldési sorszám
+i18n.metsheader.HUNGARIAN.packageNumber.description = Az átvételi szakasz során több csomag is átadható. A metaadat tartalmazza az elektronikus átvételi csomag sorszámát a beküldési szakaszon belül.
+
+i18n.metsheader.HUNGARIAN.referenceCode.label = Levéltári anyag törzsszáma
+i18n.metsheader.HUNGARIAN.referenceCode.description = Az elektronikus átvételi csomagban lévő levéltári anyaghoz kapcsolódó, már a levéltár őrzésében lévő anyag törzsszáma.
+
+i18n.metsheader.HUNGARIAN.previousReferenceCode.label = Levéltári anyag megelőző törzsszáma
+i18n.metsheader.HUNGARIAN.previousReferenceCode.description = Az elektronikus átvételi csomagban lévő levéltári anyag korábbi törzsszáma két levéltár közötti átadás esetén nyújt információt az iratképzőtől való átvétel körülményeire vonatkozóan.
+
+i18n.metsheader.HUNGARIAN.accessRestrict.label = Rendelkezésre állás
+i18n.metsheader.HUNGARIAN.accessRestrict.description = Az elektronikus átvételi csomag tartalmához történő hozzáférés korlátozásnak jelölése.
+
+i18n.metsheader.HUNGARIAN.appraisal.label = Selejtezhetőség
+i18n.metsheader.HUNGARIAN.appraisal.description = Ez az adat lehetővé teszi, hogy az elektronikus átvételi csomag szintjén meghatározható legyen az átadott állomány selejtezhetősége, amire „Teszt” típusú átvétel során lehet szükség. Lehetséges értékei: „Selejtezhető”, „Nem selejtezhető”.
+
+i18n.metsheader.HUNGARIAN.agent1.attr.name.label = Iratképző neve
+i18n.metsheader.HUNGARIAN.agent1.attr.name.description = Az elektronikus átvételi csomagban szereplő iratokat keletkeztető szervezet pontos neve. A levéltár saját anyagáról készített digitális másolat esetén a másolat eredetijének keletkeztetője.
+i18n.metsheader.HUNGARIAN.agent1.attr.note.label = Iratképző azonosítója
+i18n.metsheader.HUNGARIAN.agent1.attr.note.description = Az elektronikus átvételi csomagban szereplő iratokat keletkeztető szervezet egyedi azonosítója.
+
+i18n.metsheader.HUNGARIAN.agent2.attr.name.label = Iratkezelési szoftver neve
+i18n.metsheader.HUNGARIAN.agent2.attr.name.description = Annak az iratkezelési szoftvernek vagy más informatikai rendszernek a neve, amelyből az elektronikus átvételi csomagban szereplő adatok, iratok származnak.
+i18n.metsheader.HUNGARIAN.agent2.attr.note.label = Iratkezelési szoftver verziója
+i18n.metsheader.HUNGARIAN.agent2.attr.note.description = Annak az iratkezelési szoftvernek vagy más infromatikai rendszernek a verziószáma, amelyből az elektronikus átvételi csomagban szereplő adatok, iratok származnak.
+
+i18n.metsheader.HUNGARIAN.agent3.attr.name.label = Iratátadó szerv neve
+i18n.metsheader.HUNGARIAN.agent3.attr.name.description = Az elektronikus átvételi csomagot készítő szervezet neve, amely alapértelmezetten azonos az iratképzővel.
+i18n.metsheader.HUNGARIAN.agent3.attr.note.label = Iratátadó szerv azonosítója
+i18n.metsheader.HUNGARIAN.agent3.attr.note.description = Az elektronikus átvételi csomagot készítő szervezet egyedi azonosítója, amely alapértelmezetten azonos az iratképzővel.
+
+i18n.metsheader.HUNGARIAN.agent4.attr.name.label = Közreműködő neve
+i18n.metsheader.HUNGARIAN.agent4.attr.name.description = Az elektronikus átvételi csomag készítésében közreműködő természetes személy vagy szervezet neve.
+i18n.metsheader.HUNGARIAN.agent4.attr.note.label = Közreműködő azonosítója
+i18n.metsheader.HUNGARIAN.agent4.attr.note.description = Az elektronikus átvételi csomag készítésében közreműködő természetes személy vagy szervezet egyedi azonosítója.
+
+i18n.metsheader.HUNGARIAN.agent5.attr.name.label = Átadó rendszer neve
+i18n.metsheader.HUNGARIAN.agent5.attr.name.description = Annak az informatikai rendszernek a neve, amely az elektronikus átvételi csomagot generálta.
+i18n.metsheader.HUNGARIAN.agent5.attr.note.label = Átadó rendszer verziója
+i18n.metsheader.HUNGARIAN.agent5.attr.note.description = Annak az informatikai rendszernek a verziószáma, amely az elektronikus átvételi csomagot generálta.
+
+i18n.metsheader.HUNGARIAN.agent6.attr.name.label = Kapcsolattartó neve
+i18n.metsheader.HUNGARIAN.agent6.attr.name.description = A beadó szervezet részéről az átadásért felelős személy neve.
+i18n.metsheader.HUNGARIAN.agent6.attr.note.label = Kapcsolattartási adatok
+i18n.metsheader.HUNGARIAN.agent6.attr.note.description = A beadó szervezet részéről az átadásért felelős személy telefonszáma vagy e-mail címe.
+
+i18n.metsheader.HUNGARIAN.agent7.attr.name.label = Illetékes levéltár neve
+i18n.metsheader.HUNGARIAN.agent7.attr.name.description = Annak a levéltári szervezetnek a neve, amely az elektronikus átvételi csomag befogadását végzi.
+i18n.metsheader.HUNGARIAN.agent7.attr.note.label = Illetékes levéltár azonosítója
+i18n.metsheader.HUNGARIAN.agent7.attr.note.description = Annak a levéltári szervezetnek az azonosítója, amely az elektronikus átvételi csomag befogadását végzi.
