--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -37,6 +37,9 @@ CreationModalProcessing.finished=Finished
 CreationModalProcessing.impossibleEstimate=Impossible to estimate time
 CreationModalProcessing.remaining=Remaining time
 CreationModalProcessing.subtitle=Created %d of %d (%d%%)
+
+CreationModalMETSHeader.METSHeader=METS Header
+
 RenameModalProcessing.renameRepresentation=Rename representation
 RenameModalProcessing.renameAlreadyExists=This representation name is already being used
 
@@ -242,9 +245,12 @@ InspectionPane.multipleSelected.appliedMessage=Changes applied!
 Main.openConfigurationFolder=Open configuration folder
 restart=Restart
 CreationModalPreparation.prefix=SIP names
+CreationModalPreparation.transferring=Transferring
+CreationModalPreparation.serial=Serial No.
 sipNameStrategy.ID=ID
 sipNameStrategy.TITLE_ID=Title + ID
 sipNameStrategy.TITLE_DATE=Title + Date
+sipNameStrategy.DATE_TRANSFERRING_SERIALNUMBER=Date + Transferring + Serial
 and=and
 CreationModalPreparation.includeHierarchy=Include hierarchy
 Main.newVersion.content=Current version is %s\nLatest version is %s\n\nDo you want to download the latest version of RODA-in?
@@ -275,3 +281,100 @@ ExportBox.title=4. Submission Packages
 SchemaPane.tooManySelected.header=Too many items selected
 SchemaPane.tooManySelected.content=Multiple edition not available
 SchemaPane.tooManySelected.title=Too many items selected
+
+CreationModalMETSHeader.section.status = Status
+CreationModalMETSHeader.section.agents = Agents
+CreationModalMETSHeader.section.altrecords = AltRecordIDs
+
+i18n.metsheader.EARK.field.status.label = Status
+i18n.metsheader.EARK.field.status.description = The status of the METS document. It is used for internal processing purposes.
+
+i18n.metsheader.EARK.field.altrecords.label = ID
+i18n.metsheader.EARK.field.altrecords.description = The alternative record identifier allows one to use alternative record identifier values for the digital object represented by the METS document; the primary record identifier is stored in the OBJID attribute in the root <mets> element.
+
+i18n.metsheader.EARK.field.altrecords.attr.type.label = Type
+i18n.metsheader.EARK.field.altrecords.attr.type.description = A description of the identifier type (e.g., OCLC record number, LCCN, etc.).
+
+i18n.metsheader.EARK.field.agents.attr.name.label = Name
+i18n.metsheader.EARK.field.agents.attr.name.description = The full name of the document agent.
+
+i18n.metsheader.EARK.field.agents.attr.note.label = Note
+i18n.metsheader.EARK.field.agents.attr.note.description = Records any additional information regarding the agent's activities with respect to the METS document.
+
+i18n.metsheader.EARK.field.agents.attr.role.label = Role
+i18n.metsheader.EARK.field.agents.attr.role.description = Specifies the function of the agent with respect to the METS record. The allowed values are: CREATOR (the person(s) or institution(s) responsible for the METS document); EDITOR (the person(s) or institution(s) that prepares the metadata for encoding); ARCHIVIST (the person(s) or institution(s) responsible for the document/collection); PRESERVATION (the person(s) or institution(s) responsible for preservation functions); DISSEMINATOR (the person(s) or institution(s) responsible for dissemination functions); CUSTODIAN (the person(s) or institution(s) charged with the oversight of a document/collection); IPOWNER (Intellectual Property Owner: The person(s) or institution holding copyright, trade or service marks or other intellectual property rights for the object); OTHER (Use OTHER if none of the preceding values pertains and clarify the type and location specifier being used in the 'Other Role' attribute below).
+
+i18n.metsheader.EARK.field.agents.attr.type.label = Type
+i18n.metsheader.EARK.field.agents.attr.type.description = is used to specify the type of AGENT. It must be one of the following values: INDIVIDUAL: Use if an individual has served as the agent. ORGANIZATION: Use if an institution, corporate body, association, non-profit enterprise, government, religious body, etc. has served as the agent. OTHER: Use OTHER if none of the preceding values pertain and clarify the type of agent specifier being used in the OTHERTYPE attribute.
+
+i18n.metsheader.EARK.field.agents.attr.othertype.label = Other role
+i18n.metsheader.EARK.field.agents.attr.othertype.description = Denotes a role not contained in the allowed values set, this field is only used if OTHER is used as 'Role'.
+
+
+i18n.metsheader.HUNGARIAN.recordStatus.label = Status
+i18n.metsheader.HUNGARIAN.recordStatus.description = Package status can be "Új csomag" represented as "NEW", "Helyettesítő csomag" represented as "REPLACEMENT", "Teszt csomag", represented as "TEST".
+
+i18n.metsheader.HUNGARIAN.deliveryType.label = Transfer type
+i18n.metsheader.HUNGARIAN.deliveryType.description = Type of the transfer can be certified ERMS represented as "TANÚSÍTOTT IKTATÁS"; ERMS, represented as "STRUKTURÁLT IKTATÁS"; business system with record level metadata, represented as "STRUKTURÁLT IRATNYILVÁNTARTÁS"; high level metadata, represented as "STRUKTURÁLATLAN".
+
+i18n.metsheader.HUNGARIAN.deliverySpecification.label = Transfer specification document
+i18n.metsheader.HUNGARIAN.deliverySpecification.description = Title and url of transfer specification document.
+
+i18n.metsheader.HUNGARIAN.submissionAgreement.label = Transfer agreement
+i18n.metsheader.HUNGARIAN.submissionAgreement.description = Reference to the used submission agreement.
+
+i18n.metsheader.HUNGARIAN.previousSubmissionAgreement.label = Earlier transfer agreement
+i18n.metsheader.HUNGARIAN.previousSubmissionAgreement.description = The previous submission agreement(s) the information belongs to in the case the information is recorded.
+
+i18n.metsheader.HUNGARIAN.dataSubmissionSession.label = Submission session
+i18n.metsheader.HUNGARIAN.dataSubmissionSession.description = Submission can be delivered in several session. This data shows the description or identification of the given session.
+
+i18n.metsheader.HUNGARIAN.packageNumber.label = Submission number
+i18n.metsheader.HUNGARIAN.packageNumber.description = Submission can be delivered in several packages. This data shows the serial number of the package in the given session.
+
+i18n.metsheader.HUNGARIAN.referenceCode.label = Archival material reference code
+i18n.metsheader.HUNGARIAN.referenceCode.description = Reference code in the archival description.
+
+i18n.metsheader.HUNGARIAN.previousReferenceCode.label = Archival material previous reference code
+i18n.metsheader.HUNGARIAN.previousReferenceCode.description = An earlier used reference code in the archival description. In case where the SIP originates from other institutions maintaining a reference code structure, this element can be used to record these reference codes and therefore support the provenance of the package when a whole archival description is not submitted with the submission.
+
+i18n.metsheader.HUNGARIAN.accessRestrict.label = Restrictions
+i18n.metsheader.HUNGARIAN.accessRestrict.description = Flag to indicate restricted content in the package.
+
+i18n.metsheader.HUNGARIAN.appraisal.label = Deletable
+i18n.metsheader.HUNGARIAN.appraisal.description = Flag to indicate the temporary need for the package in the case of TEST transfer. Values can be: "Selejtezhető", "Nem selejtezhető".
+
+i18n.metsheader.HUNGARIAN.agent1.attr.name.label = Record creator
+i18n.metsheader.HUNGARIAN.agent1.attr.name.description = Name of archival creator. Name of the original creator (organisation) of the data being transferred. Please note that this might be different from the organisation which has been charged with preparing and sending the SIP to the archives.
+i18n.metsheader.HUNGARIAN.agent1.attr.note.label = Record creator identification code
+i18n.metsheader.HUNGARIAN.agent1.attr.note.description = A unique identification code for the archival creator.
+
+i18n.metsheader.HUNGARIAN.agent2.attr.name.label = Data system name
+i18n.metsheader.HUNGARIAN.agent2.attr.name.description = Name of the ERMS or data management system the records or data originates from.
+i18n.metsheader.HUNGARIAN.agent2.attr.note.label = Data system version
+i18n.metsheader.HUNGARIAN.agent2.attr.note.description = Version of the ERMS or data management system the records or data originates from.
+
+i18n.metsheader.HUNGARIAN.agent3.attr.name.label = Submitting organisation name
+i18n.metsheader.HUNGARIAN.agent3.attr.name.description = Name of the organisation submitting the package to the archive.
+i18n.metsheader.HUNGARIAN.agent3.attr.note.label = Submitting organisation identification code
+i18n.metsheader.HUNGARIAN.agent3.attr.note.description = A unique identification code for the delivering organisation.
+
+i18n.metsheader.HUNGARIAN.agent4.attr.name.label = Contributor name
+i18n.metsheader.HUNGARIAN.agent4.attr.name.description = Name of the organisation or person involved int the submission process of the package e.g. a contractor.
+i18n.metsheader.HUNGARIAN.agent4.attr.note.label = Contributor ID
+i18n.metsheader.HUNGARIAN.agent4.attr.note.description = A unique identification of the organisation or person involved int the submission process of the package e.g. a contractor.
+
+i18n.metsheader.HUNGARIAN.agent5.attr.name.label = Package creator software
+i18n.metsheader.HUNGARIAN.agent5.attr.name.description = The software which has been used to create the package.
+i18n.metsheader.HUNGARIAN.agent5.attr.note.label = Package creator software version
+i18n.metsheader.HUNGARIAN.agent5.attr.note.description = The software version which has been used to create the package.
+
+i18n.metsheader.HUNGARIAN.agent6.attr.name.label = Name of contact person
+i18n.metsheader.HUNGARIAN.agent6.attr.name.description = It may be useful to record a contact person for the submission at the time of the submission. This information is only valid during a short time period.
+i18n.metsheader.HUNGARIAN.agent6.attr.note.label = Contact information
+i18n.metsheader.HUNGARIAN.agent6.attr.note.description = Phone number and e-mail for the contact person. This information is only valid during a short time period.
+
+i18n.metsheader.HUNGARIAN.agent7.attr.name.label = Preservation organisation name
+i18n.metsheader.HUNGARIAN.agent7.attr.name.description = Name of the organisation responsible for preservation of a submitted package.
+i18n.metsheader.HUNGARIAN.agent7.attr.note.label = Preservation organisation ID
+i18n.metsheader.HUNGARIAN.agent7.attr.note.description = ID of the organisation responsible for preservation of a submitted package.
