changed various mets header elements' appearance; replaced [+] button with an hyperlink; hungarian sip fields 'accessRestrict' and 'appraisal' use a combobox; does not show mets header for eark; only validate mets header data when the 'Done' button is pressed

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -283,18 +283,21 @@ SchemaPane.tooManySelected.content=Multiple edition not available
 SchemaPane.tooManySelected.title=Too many items selected
 
 CreationModalMETSHeader.section.status = Status
-CreationModalMETSHeader.section.agents = Agents
 CreationModalMETSHeader.section.altrecords = AltRecordIDs
+CreationModalMETSHeader.section.agents = Agents
 
+i18n.metsheader.EARK.field.status.title = Status
 i18n.metsheader.EARK.field.status.label = Status
 i18n.metsheader.EARK.field.status.description = The status of the METS document. It is used for internal processing purposes.
 
+i18n.metsheader.EARK.field.altrecords.title = Record identifier
 i18n.metsheader.EARK.field.altrecords.label = ID
 i18n.metsheader.EARK.field.altrecords.description = The alternative record identifier allows one to use alternative record identifier values for the digital object represented by the METS document; the primary record identifier is stored in the OBJID attribute in the root <mets> element.
 
 i18n.metsheader.EARK.field.altrecords.attr.type.label = Type
 i18n.metsheader.EARK.field.altrecords.attr.type.description = A description of the identifier type (e.g., OCLC record number, LCCN, etc.).
 
+i18n.metsheader.EARK.field.agents.title = Agent
 i18n.metsheader.EARK.field.agents.attr.name.label = Name
 i18n.metsheader.EARK.field.agents.attr.name.description = The full name of the document agent.
 
@@ -310,71 +313,92 @@ i18n.metsheader.EARK.field.agents.attr.type.description = is used to specify the
 i18n.metsheader.EARK.field.agents.attr.othertype.label = Other role
 i18n.metsheader.EARK.field.agents.attr.othertype.description = Denotes a role not contained in the allowed values set, this field is only used if OTHER is used as 'Role'.
 
+i18n.metsheader.HUNGARIAN.type.recordstatus = Status
+i18n.metsheader.HUNGARIAN.type.altrecordid = Transfer and submission
+i18n.metsheader.HUNGARIAN.type.agent = Agents
 
-i18n.metsheader.HUNGARIAN.recordStatus.label = Status
-i18n.metsheader.HUNGARIAN.recordStatus.description = Package status can be "Új csomag" represented as "NEW", "Helyettesítő csomag" represented as "REPLACEMENT", "Teszt csomag", represented as "TEST".
+i18n.metsheader.HUNGARIAN.field.recordStatus.title = Status
+i18n.metsheader.HUNGARIAN.field.recordStatus.label = Status
+i18n.metsheader.HUNGARIAN.field.recordStatus.description = Package status can be "Új csomag" represented as "NEW", "Helyettesítő csomag" represented as "REPLACEMENT", "Teszt csomag", represented as "TEST".
 
-i18n.metsheader.HUNGARIAN.deliveryType.label = Transfer type
-i18n.metsheader.HUNGARIAN.deliveryType.description = Type of the transfer can be certified ERMS represented as "TANÚSÍTOTT IKTATÁS"; ERMS, represented as "STRUKTURÁLT IKTATÁS"; business system with record level metadata, represented as "STRUKTURÁLT IRATNYILVÁNTARTÁS"; high level metadata, represented as "STRUKTURÁLATLAN".
+i18n.metsheader.HUNGARIAN.field.deliveryType.title = Transfer type
+i18n.metsheader.HUNGARIAN.field.deliveryType.label = Transfer type
+i18n.metsheader.HUNGARIAN.field.deliveryType.description = Type of the transfer can be certified ERMS represented as "TANÚSÍTOTT IKTATÁS"; ERMS, represented as "STRUKTURÁLT IKTATÁS"; business system with record level metadata, represented as "STRUKTURÁLT IRATNYILVÁNTARTÁS"; high level metadata, represented as "STRUKTURÁLATLAN".
 
-i18n.metsheader.HUNGARIAN.deliverySpecification.label = Transfer specification document
-i18n.metsheader.HUNGARIAN.deliverySpecification.description = Title and url of transfer specification document.
+i18n.metsheader.HUNGARIAN.field.deliverySpecification.title = Transfer specification document
+i18n.metsheader.HUNGARIAN.field.deliverySpecification.label = Transfer specification document
+i18n.metsheader.HUNGARIAN.field.deliverySpecification.description = Title and url of transfer specification document.
 
-i18n.metsheader.HUNGARIAN.submissionAgreement.label = Transfer agreement
-i18n.metsheader.HUNGARIAN.submissionAgreement.description = Reference to the used submission agreement.
+i18n.metsheader.HUNGARIAN.field.submissionAgreement.title = Transfer agreement
+i18n.metsheader.HUNGARIAN.field.submissionAgreement.label = Transfer agreement
+i18n.metsheader.HUNGARIAN.field.submissionAgreement.description = Reference to the used submission agreement.
 
-i18n.metsheader.HUNGARIAN.previousSubmissionAgreement.label = Earlier transfer agreement
-i18n.metsheader.HUNGARIAN.previousSubmissionAgreement.description = The previous submission agreement(s) the information belongs to in the case the information is recorded.
+i18n.metsheader.HUNGARIAN.field.previousSubmissionAgreement.title = Earlier transfer agreement
+i18n.metsheader.HUNGARIAN.field.previousSubmissionAgreement.label = Earlier transfer agreement
+i18n.metsheader.HUNGARIAN.field.previousSubmissionAgreement.description = The previous submission agreement(s) the information belongs to in the case the information is recorded.
 
-i18n.metsheader.HUNGARIAN.dataSubmissionSession.label = Submission session
-i18n.metsheader.HUNGARIAN.dataSubmissionSession.description = Submission can be delivered in several session. This data shows the description or identification of the given session.
+i18n.metsheader.HUNGARIAN.field.dataSubmissionSession.title = Submission session
+i18n.metsheader.HUNGARIAN.field.dataSubmissionSession.label = Submission session
+i18n.metsheader.HUNGARIAN.field.dataSubmissionSession.description = Submission can be delivered in several session. This data shows the description or identification of the given session.
 
-i18n.metsheader.HUNGARIAN.packageNumber.label = Submission number
-i18n.metsheader.HUNGARIAN.packageNumber.description = Submission can be delivered in several packages. This data shows the serial number of the package in the given session.
+i18n.metsheader.HUNGARIAN.field.packageNumber.title = Submission number
+i18n.metsheader.HUNGARIAN.field.packageNumber.label = Submission number
+i18n.metsheader.HUNGARIAN.field.packageNumber.description = Submission can be delivered in several packages. This data shows the serial number of the package in the given session.
 
-i18n.metsheader.HUNGARIAN.referenceCode.label = Archival material reference code
-i18n.metsheader.HUNGARIAN.referenceCode.description = Reference code in the archival description.
+i18n.metsheader.HUNGARIAN.field.referenceCode.title = Archival material reference code
+i18n.metsheader.HUNGARIAN.field.referenceCode.label = Archival material reference code
+i18n.metsheader.HUNGARIAN.field.referenceCode.description = Reference code in the archival description.
 
-i18n.metsheader.HUNGARIAN.previousReferenceCode.label = Archival material previous reference code
-i18n.metsheader.HUNGARIAN.previousReferenceCode.description = An earlier used reference code in the archival description. In case where the SIP originates from other institutions maintaining a reference code structure, this element can be used to record these reference codes and therefore support the provenance of the package when a whole archival description is not submitted with the submission.
+i18n.metsheader.HUNGARIAN.field.previousReferenceCode.title = Archival material previous reference code
+i18n.metsheader.HUNGARIAN.field.previousReferenceCode.label = Archival material previous reference code
+i18n.metsheader.HUNGARIAN.field.previousReferenceCode.description = An earlier used reference code in the archival description. In case where the SIP originates from other institutions maintaining a reference code structure, this element can be used to record these reference codes and therefore support the provenance of the package when a whole archival description is not submitted with the submission.
 
-i18n.metsheader.HUNGARIAN.accessRestrict.label = Restrictions
-i18n.metsheader.HUNGARIAN.accessRestrict.description = Flag to indicate restricted content in the package.
+i18n.metsheader.HUNGARIAN.field.accessRestrict.title = Restrictions
+i18n.metsheader.HUNGARIAN.field.accessRestrict.label = Restrictions
+i18n.metsheader.HUNGARIAN.field.accessRestrict.description = Flag to indicate restricted content in the package.
 
-i18n.metsheader.HUNGARIAN.appraisal.label = Deletable
-i18n.metsheader.HUNGARIAN.appraisal.description = Flag to indicate the temporary need for the package in the case of TEST transfer. Values can be: "Selejtezhető", "Nem selejtezhető".
+i18n.metsheader.HUNGARIAN.field.appraisal.title = Deletable
+i18n.metsheader.HUNGARIAN.field.appraisal.label = Deletable
+i18n.metsheader.HUNGARIAN.field.appraisal.description = Flag to indicate the temporary need for the package in the case of TEST transfer. Values can be: "Selejtezhető", "Nem selejtezhető".
 
-i18n.metsheader.HUNGARIAN.agent1.attr.name.label = Record creator
-i18n.metsheader.HUNGARIAN.agent1.attr.name.description = Name of archival creator. Name of the original creator (organisation) of the data being transferred. Please note that this might be different from the organisation which has been charged with preparing and sending the SIP to the archives.
-i18n.metsheader.HUNGARIAN.agent1.attr.note.label = Record creator identification code
-i18n.metsheader.HUNGARIAN.agent1.attr.note.description = A unique identification code for the archival creator.
+i18n.metsheader.HUNGARIAN.field.agent1.title = Record creator
+i18n.metsheader.HUNGARIAN.field.agent1.attr.name.label = Record creator
+i18n.metsheader.HUNGARIAN.field.agent1.attr.name.description = Name of archival creator. Name of the original creator (organisation) of the data being transferred. Please note that this might be different from the organisation which has been charged with preparing and sending the SIP to the archives.
+i18n.metsheader.HUNGARIAN.field.agent1.attr.note.label = Record creator identification code
+i18n.metsheader.HUNGARIAN.field.agent1.attr.note.description = A unique identification code for the archival creator.
 
-i18n.metsheader.HUNGARIAN.agent2.attr.name.label = Data system name
-i18n.metsheader.HUNGARIAN.agent2.attr.name.description = Name of the ERMS or data management system the records or data originates from.
-i18n.metsheader.HUNGARIAN.agent2.attr.note.label = Data system version
-i18n.metsheader.HUNGARIAN.agent2.attr.note.description = Version of the ERMS or data management system the records or data originates from.
+i18n.metsheader.HUNGARIAN.field.agent2.title = Data system
+i18n.metsheader.HUNGARIAN.field.agent2.attr.name.label = Data system name
+i18n.metsheader.HUNGARIAN.field.agent2.attr.name.description = Name of the ERMS or data management system the records or data originates from.
+i18n.metsheader.HUNGARIAN.field.agent2.attr.note.label = Data system version
+i18n.metsheader.HUNGARIAN.field.agent2.attr.note.description = Version of the ERMS or data management system the records or data originates from.
 
-i18n.metsheader.HUNGARIAN.agent3.attr.name.label = Submitting organisation name
-i18n.metsheader.HUNGARIAN.agent3.attr.name.description = Name of the organisation submitting the package to the archive.
-i18n.metsheader.HUNGARIAN.agent3.attr.note.label = Submitting organisation identification code
-i18n.metsheader.HUNGARIAN.agent3.attr.note.description = A unique identification code for the delivering organisation.
+i18n.metsheader.HUNGARIAN.field.agent3.title = Submitting organisation
+i18n.metsheader.HUNGARIAN.field.agent3.attr.name.label = Submitting organisation name
+i18n.metsheader.HUNGARIAN.field.agent3.attr.name.description = Name of the organisation submitting the package to the archive.
+i18n.metsheader.HUNGARIAN.field.agent3.attr.note.label = Submitting organisation identification code
+i18n.metsheader.HUNGARIAN.field.agent3.attr.note.description = A unique identification code for the delivering organisation.
 
-i18n.metsheader.HUNGARIAN.agent4.attr.name.label = Contributor name
-i18n.metsheader.HUNGARIAN.agent4.attr.name.description = Name of the organisation or person involved int the submission process of the package e.g. a contractor.
-i18n.metsheader.HUNGARIAN.agent4.attr.note.label = Contributor ID
-i18n.metsheader.HUNGARIAN.agent4.attr.note.description = A unique identification of the organisation or person involved int the submission process of the package e.g. a contractor.
+i18n.metsheader.HUNGARIAN.field.agent4.title = Contributor
+i18n.metsheader.HUNGARIAN.field.agent4.attr.name.label = Contributor name
+i18n.metsheader.HUNGARIAN.field.agent4.attr.name.description = Name of the organisation or person involved int the submission process of the package e.g. a contractor.
+i18n.metsheader.HUNGARIAN.field.agent4.attr.note.label = Contributor ID
+i18n.metsheader.HUNGARIAN.field.agent4.attr.note.description = A unique identification of the organisation or person involved int the submission process of the package e.g. a contractor.
 
-i18n.metsheader.HUNGARIAN.agent5.attr.name.label = Package creator software
-i18n.metsheader.HUNGARIAN.agent5.attr.name.description = The software which has been used to create the package.
-i18n.metsheader.HUNGARIAN.agent5.attr.note.label = Package creator software version
-i18n.metsheader.HUNGARIAN.agent5.attr.note.description = The software version which has been used to create the package.
+i18n.metsheader.HUNGARIAN.field.agent5.title = Package creator software
+i18n.metsheader.HUNGARIAN.field.agent5.attr.name.label = Package creator software
+i18n.metsheader.HUNGARIAN.field.agent5.attr.name.description = The software which has been used to create the package.
+i18n.metsheader.HUNGARIAN.field.agent5.attr.note.label = Package creator software version
+i18n.metsheader.HUNGARIAN.field.agent5.attr.note.description = The software version which has been used to create the package.
 
-i18n.metsheader.HUNGARIAN.agent6.attr.name.label = Name of contact person
-i18n.metsheader.HUNGARIAN.agent6.attr.name.description = It may be useful to record a contact person for the submission at the time of the submission. This information is only valid during a short time period.
-i18n.metsheader.HUNGARIAN.agent6.attr.note.label = Contact information
-i18n.metsheader.HUNGARIAN.agent6.attr.note.description = Phone number and e-mail for the contact person. This information is only valid during a short time period.
+i18n.metsheader.HUNGARIAN.field.agent6.title = Contact person
+i18n.metsheader.HUNGARIAN.field.agent6.attr.name.label = Name of contact person
+i18n.metsheader.HUNGARIAN.field.agent6.attr.name.description = It may be useful to record a contact person for the submission at the time of the submission. This information is only valid during a short time period.
+i18n.metsheader.HUNGARIAN.field.agent6.attr.note.label = Contact information
+i18n.metsheader.HUNGARIAN.field.agent6.attr.note.description = Phone number and e-mail for the contact person. This information is only valid during a short time period.
 
-i18n.metsheader.HUNGARIAN.agent7.attr.name.label = Preservation organisation name
-i18n.metsheader.HUNGARIAN.agent7.attr.name.description = Name of the organisation responsible for preservation of a submitted package.
-i18n.metsheader.HUNGARIAN.agent7.attr.note.label = Preservation organisation ID
-i18n.metsheader.HUNGARIAN.agent7.attr.note.description = ID of the organisation responsible for preservation of a submitted package.
+i18n.metsheader.HUNGARIAN.field.agent7.title = Preservation organisation
+i18n.metsheader.HUNGARIAN.field.agent7.attr.name.label = Preservation organisation name
+i18n.metsheader.HUNGARIAN.field.agent7.attr.name.description = Name of the organisation responsible for preservation of a submitted package.
+i18n.metsheader.HUNGARIAN.field.agent7.attr.note.label = ID
+i18n.metsheader.HUNGARIAN.field.agent7.attr.note.description = ID of the organisation responsible for preservation of a submitted package.
