fixed METS Header Agents saved state not being correctly recovered; fixes #262

--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -19,6 +19,7 @@ remove=Remove
 start=Start
 rename=Rename
 root=Root
+clear=Clear
 
 CreationModalPreparation.choose=Choose...
 CreationModalPreparation.creatingSips=Creating SIPs
