--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -19,6 +19,7 @@ remove=Remover
 start=Iniciar
 rename=Renomear
 root=Raiz
+clear=Limpar
 
 CreationModalPreparation.choose=Escolher...
 CreationModalPreparation.creatingSips=A criar pacotes de submissão
