fixes #264 by adding missing translations

--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -261,11 +261,18 @@ SchemaPane.tooManySelected.title=Túl sok elem van kijelölve
 
 i18n.metsheader.HUNGARIAN.field.recordStatus.title = Státusz
 i18n.metsheader.HUNGARIAN.field.recordStatus.label = Státusz
-i18n.metsheader.HUNGARIAN.field.recordStatus.description = Az elektronikus átvételi csomag státusza. Lehetséges értékei:\\n„Új csomag”, amelynek reprezentációja „NEW”;\\n„Helyettesítő csomag”, amelynek reprezentációja „REPLACEMENT”;\\n„Teszt csomag”, amelynek reprezentációja „TEST”.
+i18n.metsheader.HUNGARIAN.field.recordStatus.description = Az elektronikus átvételi csomag státusza. Lehetséges értékei: \
+  „Új csomag”, amelynek reprezentációja „NEW”; \
+  „Helyettesítő csomag”, amelynek reprezentációja „REPLACEMENT”; \
+  „Teszt csomag”, amelynek reprezentációja „TEST”.
 
 i18n.metsheader.HUNGARIAN.field.deliveryType.title = Átadás típusa
 i18n.metsheader.HUNGARIAN.field.deliveryType.label = Átadás típusa
-i18n.metsheader.HUNGARIAN.field.deliveryType.description = Az elektronikus átvételi csomag átadási típusa:\\n„tanúsított iratkezelési szoftver”, amelynek reprezentációja „TANÚSÍTOTT IKTATÁS”;\\n„iktatási iratnyilvántartás”, amelynek reprezentációja „STRUKTURÁLT IKTATÁS”;\\n„nem iktatási típusú iratnyilvántartás, iratszintű metaadatokkal”, amelynek reprezentációja „STRUKTURÁLT IRATNYILVÁNTARTÁS”;\\n„nem iratszintű metaadatok”, amelynek reprezentációja „STRUKTURÁLATLAN”.
+i18n.metsheader.HUNGARIAN.field.deliveryType.description = Az elektronikus átvételi csomag átadási típusa: \
+  „tanúsított iratkezelési szoftver”, amelynek reprezentációja „TANÚSÍTOTT IKTATÁS”; \
+  „iktatási iratnyilvántartás”, amelynek reprezentációja „STRUKTURÁLT IKTATÁS”; \
+  „nem iktatási típusú iratnyilvántartás, iratszintű metaadatokkal”, amelynek reprezentációja „STRUKTURÁLT IRATNYILVÁNTARTÁS”; \
+  „nem iratszintű metaadatok”, amelynek reprezentációja „STRUKTURÁLATLAN”.
 
 i18n.metsheader.HUNGARIAN.field.deliverySpecification.title = Átvétel típusát leíró dokumentum
 i18n.metsheader.HUNGARIAN.field.deliverySpecification.label = Átvétel típusát leíró dokumentum
