--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -275,3 +275,52 @@ ExportBox.title=4. Pacotes de Submissão
 SchemaPane.tooManySelected.header=Demasiados itens seleccionados
 SchemaPane.tooManySelected.content=Edição múltipla não disponível
 SchemaPane.tooManySelected.title=Demasiados itens seleccionados
+
+
+
+CreationModalMETSHeader.section.status = Estado
+CreationModalMETSHeader.section.altrecords = IDs de registo alternativos
+CreationModalMETSHeader.section.agents = Agentes
+
+i18n.metsheader.EARK.field.status.title = Estado
+i18n.metsheader.EARK.field.status.label = Estado
+i18n.metsheader.EARK.field.status.description = O estado do documento METS. Usado para efeitos de processamento interno.
+
+i18n.metsheader.EARK.field.altrecords.title = ID de registo alternativo
+i18n.metsheader.EARK.field.altrecords.label = ID
+i18n.metsheader.EARK.field.altrecords.description = Um identificador de registos alternativo permite que sejam usados diferentes IDs alternativos para o objeto digital representado pelo documento METS; O identificador primário do registo é guardado no atributo OBJID na raiz do elemento <mets>.
+
+i18n.metsheader.EARK.field.altrecords.attr.type.label = Tipo
+i18n.metsheader.EARK.field.altrecords.attr.type.description = Descritivo do tipo do identificador de registo alternativo (exemplo: número de OCLC, LCCN, etc.).
+
+i18n.metsheader.EARK.field.agents.title = Agente
+i18n.metsheader.EARK.field.agents.attr.name.label = Nome
+i18n.metsheader.EARK.field.agents.attr.name.description = O nome completo do agente do documento.
+
+i18n.metsheader.EARK.field.agents.attr.note.label = Nota
+i18n.metsheader.EARK.field.agents.attr.note.description = Regista informação adicional relacionada com as atividade do agente referentes ao documento METS.
+
+i18n.metsheader.EARK.field.agents.attr.role.label = Função
+i18n.metsheader.EARK.field.agents.attr.role.description = Especifica o papel do agente no que diz respeito ao registo METS. Os valores permitidos são: \
+  CREATOR (a(s) pessoa(s) ou institutição(ões) responsáveis pelo documento METS); \
+  EDITOR (a(s) pessoa(s) ou institutição(ões) que preparam os metadados); \
+  ARCHIVIST (a(s) pessoa(s) ou institutição(ões) responsáveis pelo documento/coleção); \
+  PRESERVATION (a(s) pessoa(s) ou institutição(ões) responsáveis por funções de preservação); \
+  DISSEMINATOR (a(s) pessoa(s) ou institutição(ões) responsáveis por funções de disseminação); \
+  CUSTODIAN (a(s) pessoa(s) ou institutição(ões) encarregues de supervisionar o documento/coleção); \
+  IPOWNER (Dono da propriedade intelectual: A(s) pessoa(s) ou institutição(ões) que detêm o copyright, trademark, service mark ou outro tipo de direitos sobre a propriedade intelectual do objeto); \
+  OTHER (Use OTHER se nenhum dos outros valores é aplicável, e especifique o tipo a ser usado no campo 'Outra função').
+
+i18n.metsheader.EARK.field.agents.attr.type.label = Tipo
+i18n.metsheader.EARK.field.agents.attr.type.description = É usado para especificar o tipo do agente. Tem de ser um dos seguintes valores: \
+  INDIVIDUAL: Usar quando o agente é um indivíduo. \
+  ORGANIZATION: Usar quando o agente é uma instituição, associação, organização, governo, grupo religioso ou outro tipo de pessoa coletiva has served as the agent. \
+  OTHER: Usar quando nenhum dos valores anteriores é aplicável, e especificar o tipo do agente no campo 'Outro tipo'.
+
+i18n.metsheader.EARK.field.agents.attr.othertype.label = Outra função
+i18n.metsheader.EARK.field.agents.attr.othertype.description = Especifica uma função específica, apenas usado quando a função é 'OTHER'.
+CreationModalMETSHeader.METSHeader=Cabeçalho do METS
+IPContentType.RDBMS=Sistema de Gestão de Bases de Dados Relacionais
+CreationModalPreparation.serial=Número de série
+CreationModalPreparation.transferring=Transferência
+IPContentType.SMURF=SMURF
