--- a/src/main/resources/properties/lang_en.properties
+++ b/src/main/resources/properties/lang_en.properties
@@ -306,10 +306,21 @@ i18n.metsheader.EARK.field.agents.attr.note.label = Note
 i18n.metsheader.EARK.field.agents.attr.note.description = Records any additional information regarding the agent's activities with respect to the METS document.
 
 i18n.metsheader.EARK.field.agents.attr.role.label = Role
-i18n.metsheader.EARK.field.agents.attr.role.description = Specifies the function of the agent with respect to the METS record. The allowed values are: CREATOR (the person(s) or institution(s) responsible for the METS document); EDITOR (the person(s) or institution(s) that prepares the metadata for encoding); ARCHIVIST (the person(s) or institution(s) responsible for the document/collection); PRESERVATION (the person(s) or institution(s) responsible for preservation functions); DISSEMINATOR (the person(s) or institution(s) responsible for dissemination functions); CUSTODIAN (the person(s) or institution(s) charged with the oversight of a document/collection); IPOWNER (Intellectual Property Owner: The person(s) or institution holding copyright, trade or service marks or other intellectual property rights for the object); OTHER (Use OTHER if none of the preceding values pertains and clarify the type and location specifier being used in the 'Other Role' attribute below).
+i18n.metsheader.EARK.field.agents.attr.role.description = Specifies the function of the agent with respect to the METS record. The allowed values are: \
+  CREATOR (the person(s) or institution(s) responsible for the METS document); \
+  EDITOR (the person(s) or institution(s) that prepares the metadata for encoding); \
+  ARCHIVIST (the person(s) or institution(s) responsible for the document/collection); \
+  PRESERVATION (the person(s) or institution(s) responsible for preservation functions); \
+  DISSEMINATOR (the person(s) or institution(s) responsible for dissemination functions); \
+  CUSTODIAN (the person(s) or institution(s) charged with the oversight of a document/collection); \
+  IPOWNER (Intellectual Property Owner: The person(s) or institution holding copyright, trade or service marks or other intellectual property rights for the object); \
+  OTHER (Use OTHER if none of the preceding values pertains and clarify the type and location specifier being used in the 'Other Role' attribute below).
 
 i18n.metsheader.EARK.field.agents.attr.type.label = Type
-i18n.metsheader.EARK.field.agents.attr.type.description = is used to specify the type of AGENT. It must be one of the following values: INDIVIDUAL: Use if an individual has served as the agent. ORGANIZATION: Use if an institution, corporate body, association, non-profit enterprise, government, religious body, etc. has served as the agent. OTHER: Use OTHER if none of the preceding values pertain and clarify the type of agent specifier being used in the OTHERTYPE attribute.
+i18n.metsheader.EARK.field.agents.attr.type.description = is used to specify the type of AGENT. It must be one of the following values: \
+  INDIVIDUAL: Use if an individual has served as the agent. \
+  ORGANIZATION: Use if an institution, corporate body, association, non-profit enterprise, government, religious body, etc. has served as the agent. \
+  OTHER: Use OTHER if none of the preceding values pertain and clarify the type of agent specifier being used in the OTHERTYPE attribute.
 
 i18n.metsheader.EARK.field.agents.attr.othertype.label = Other role
 i18n.metsheader.EARK.field.agents.attr.othertype.description = Denotes a role not contained in the allowed values set, this field is only used if OTHER is used as 'Role'.
@@ -403,3 +414,5 @@ i18n.metsheader.HUNGARIAN.field.agent7.attr.name.label = Preservation organisati
 i18n.metsheader.HUNGARIAN.field.agent7.attr.name.description = Name of the organisation responsible for preservation of a submitted package.
 i18n.metsheader.HUNGARIAN.field.agent7.attr.note.label = ID
 i18n.metsheader.HUNGARIAN.field.agent7.attr.note.description = ID of the organisation responsible for preservation of a submitted package.
+IPContentType.RDBMS=Relational Database Management System
+IPContentType.SMURF=SMURF
